kube/services/netpolicy/wts_netpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: networkpolicy-wts
spec:
  podSelector:
    matchLabels:
      app: wts
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            role: usercode
      - podSelector:
          matchLabels:
            app: revproxy
      ports:
         - port: 80
         - port: 443
  egress:
    - {}
  policyTypes:
   - Ingress
   - Egress
